# kr_mav_control

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  LICENSE  README.md  stack.xml  wercker.yml
asctec_firmware/: .gitignore  (+51 more)
crazyflie_interface/: CMakeLists.txt  README.md  package.xml
crazyflie_interface/config/: cf_gains.yaml  crazyflie.yaml
crazyflie_interface/launch/: test.launch
crazyflie_interface/src/: so3cmd_to_crazyflie_nodelet.cpp
crazyflie_interface/thrust_fit_matlab/: thrust_fitting.m
kquad_interface/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugin.xml  package.xml
kquad_interface/include/: SerialDevice.hh  Timer.hh  crc.h  kBotPacket2.h  kBotPacketParser.hh  kQuadCom.h  kQuadDataTypes2.h  kQuadInterface.hh  kQuadInterfaceDataTypes.hh  mathMacros.h
kquad_interface/launch/: standalone.launch
kquad_interface/src/: SerialDevice.cc  crc32.c  kBotPacket2.c  kBotPacketParser.cc  kQuadInterface.cc  kQuadInterfaceDataTypes.cc  kquad_interface_nodelet.cpp
kr_mav_controllers/: CMakeLists.txt  README.md  nodelet_plugin.xml  package.xml
kr_mav_controllers/cfg/: SO3.cfg
kr_mav_controllers/include/kr_mav_controllers/: PIDControl.hpp  SO3Control.h  SO3Control.hpp  so3_control_tester.hpp
kr_mav_controllers/src/: PIDControl.cpp  SO3Control.cpp  pid_control_component.cpp  pid_control_nodelet.cpp  so3_control_component.cpp  so3_control_nodelet.cpp  so3_trpy_control.cpp
kr_mav_controllers/test/: so3_control_component_test.cpp  so3_control_nodelet.test  so3_control_nodelet_test.cpp
kr_mav_controllers/test/launch/: so3_control_component_test.test.py
kr_mav_launch/: CMakeLists.txt  package.xml
kr_mav_launch/config/: mav_manager_params.yaml  tracker_params.yaml  trackers.yaml
kr_mav_launch/launch/: demo.launch  example_control.launch  rviz.launch  rviz_config.rviz  sim.launch
kr_mav_launch/scripts/: demo_gazebo.sh  demo_lissajous.py  demo_sim.sh  sample.bash  start_locations.csv  takeoff.sh
kr_mav_manager/: CMakeLists.txt  README.md  package.xml
kr_mav_manager/include/kr_mav_manager/: manager.h  manager.hpp  mav_manager_services.h  mav_manager_services.hpp
kr_mav_manager/launch/: asctec_comms.launch  demo.launch  example_control.launch  manager.launch
kr_mav_manager/src/: manager.cpp  mav_services.cpp  sample_sub.cpp
kr_mav_manager/srv/: Circle.srv  CompoundLissajous.srv  GoalTimed.srv  Lissajous.srv  Vec4.srv
kr_mav_msgs/: CMakeLists.txt  package.xml  ros1_cmake
kr_mav_msgs/msg/: MotorRPM.msg  OutputData.msg  PWMCommand.msg  PolyTraj.msg  PositionCommand.msg  SO3Command.msg  Serial.msg  TRPYCommand.msg
kr_mesh_visualization/: CMakeLists.txt  README.md  package.xml
kr_mesh_visualization/launch/: test.launch  test_launch.py
kr_mesh_visualization/src/: mesh_visualization.cpp
kr_quadrotor_simulator/: CMakeLists.txt  package.xml
kr_quadrotor_simulator/config/: crazyflie_params.yaml  qualcomm_quad_params.yaml
kr_quadrotor_simulator/include/kr_quadrotor_simulator/: Quadrotor.h
kr_quadrotor_simulator/launch/: control.launch  example.launch  mesh_vis.launch  rviz.launch  sim.launch
kr_quadrotor_simulator/scripts/: demo_gazebo.sh  demo_lissajous.py  demo_sim.sh  takeoff.sh
kr_quadrotor_simulator/src/: quadrotor_simulator_base.hpp  quadrotor_simulator_so3.cpp  quadrotor_simulator_trpy.cpp
kr_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
kr_quadrotor_simulator_humble/: CMakeLists.txt  CMakeLists.txt_noetic  package.xml  package.xml_noetic
kr_quadrotor_simulator_humble/src/: humble_quadrotor_simulator.cpp  humble_quadrotor_simulator_base.hpp  humble_quadrotor_simulator_so3.cpp  quadrotor_simulator_base.hpp  quadrotor_simulator_trpy.cpp
kr_quadrotor_simulator_humble/src/dynamics/: Quadrotor.cpp
mav_manager/: CMakeLists.txt  README.md  package.xml
mav_manager/config/: mav_manager_params.yaml  params.yaml
mav_manager/include/: manager.h
mav_manager/include/mav_manager/: manager.h  mav_manager_services.h
mav_manager/launch/: asctec_comms.launch  control.launch  demo.launch  dopey.launch  example_control.launch  manager.launch  robot_comms.launch  sim.launch  test.bash  visualization.launch
mav_manager/scripts/: sample.bash  sample_px4.bash  takeoff.sh
mav_manager/src/: manager.cpp  sample.cpp  sample_service_server.cpp  sample_sub.cpp
mav_manager/srv/: Bool.srv  Empty.srv  Lissajous.srv  Vec4.srv
mavros_interface/: CMakeLists.txt  README.md  nodelet_plugin.xml  package.xml
mavros_interface/launch/: attitude_tuning_tool.launch  mavros_interface.launch  px4_simulator.launch  test.launch
mavros_interface/scripts/: takeoff.sh
mavros_interface/src/: attitude_tuning_tool.cpp  mavros_interface_nodelet.cpp  so3cmd_to_mavros_nodelet.cpp
mesh_visualization/: CMakeLists.txt  mainpage.dox  manifest.xml.backup  package.xml
mesh_visualization/launch/: test.launch
mesh_visualization/mesh/: nano.mesh
mesh_visualization/src/: mesh_visualization.cpp
pid_control/: CMakeLists.txt  mainpage.dox  manifest.xml.backup  nodelet_plugin.xml  package.xml
pid_control/src/: pid_control_nodelet.cpp
pose_visualization/: CMakeLists.txt  package.xml
pose_visualization/launch/: test.launch
pose_visualization/src/: pose_visualization.cpp
qc_serial_interface/: CMakeLists.txt  nodelet_plugin.xml  package.xml
qc_serial_interface/launch/: test.launch
qc_serial_interface/src/: decode_msgs.cpp  encode_msgs.cpp  quad_decode_msg_nodelet.cpp  quad_encode_msg_nodelet.cpp
quad_decode_msg/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugin.xml  package.xml
quad_decode_msg/launch/: test.launch
quad_decode_msg/src/: quad_decode_msg_nodelet.cpp
quad_encode_msg/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugin.xml  package.xml
quad_encode_msg/src/: quad_encode_msg.cpp  quad_encode_msg_nodelet.cpp
quad_serial_comm/: CMakeLists.txt  CMakeLists.txt.backup  mainpage.dox  manifest.xml  nodelet_plugin.xml  package.xml
quad_serial_comm/launch/: asctec_comms.launch  test.launch
quad_serial_comm/src/: asctec_serial_interface.cpp  quad_serial_comm.cpp  quad_serial_comm_nodelet.cpp
(+479 files in other folders)
