<package>
  <name>kquad_interface</name>
  <version>1.0.0</version>
  <description>kquad_interface</description>
<maintainer email="kartikmohta@users.noreply.github.com">Kartik Mohta</maintainer>

  <license>Proprietary</license>

  <url type="website">http://ros.org/wiki/kquad_interface</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kartik Mohta</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>quadrotor_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->
  <!-- <test_depend>quadrotor_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->

<export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
</export>

</package>