<package format="2">
  <name>kquad_interface</name>
  <version>1.0.0</version>
  <description>kquad_interface</description>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="michael.f.watterson@gmail.com">Michael Watterson</maintainer>

  <license>Proprietary</license>

  <author>Kartik Mohta</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>quadrotor_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

<export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
</export>

</package>