<package format="2">
  <name>kr_mav_manager</name>
  <version>1.0.0</version>
  <description>
    This package provides tools to interface with the kr_mav_control stack
  </description>
  <maintainer email="jut@seas.upenn.edu">Justin Thomas</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>kr_mav_msgs</depend>
  <depend>kr_tracker_msgs</depend>
  <depend>std_srvs</depend>
  <depend>actionlib</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
