<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kr_mav_manager</name>
  <version>0.0.0</version>
  <description>
  	This package provides tools to interface with the kr_mav_control stack
  </description>
  <maintainer email="jut@seas.upenn.edu">Justin Thomas</maintainer>
  <maintainer email="pranavpshah2098@gmail.com">Pranav Shah</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>bultin_interfaces</depend>
  <depend>rclcpp_action</depend>
  <depend>Eigen3</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>kr_mav_msgs</depend>
  <depend>kr_trackers_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
