<package format="2">
  <name>kr_mav_msgs</name>
  <version>1.0.0</version>
  <description>kr_mav_msgs</description>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="michael.f.watterson@gmail.com">Michael Watterson</maintainer>
  <maintainer email="justinthomas@jtwebs.net">Justin Thomas</maintainer>

  <license>BSD</license>

  <author>Kartik Mohta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
