<package format="3">
  <name>kr_mav_msgs</name>
  <version>1.0.0</version>
  <description>kr_mav_msgs</description>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="michael.f.watterson@gmail.com">Michael Watterson</maintainer>
  <maintainer email="justinthomas@jtwebs.net">Justin Thomas</maintainer>
  <maintainer email="kashishgarg9@gmail.com">Kashish Garg</maintainer>

  <license>BSD</license>
  <author>Kartik Mohta</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
